fix: added schema in path parameters into endpoint verification.verify. in swagger docs no has errors.
